--- a/index.html
+++ b/index.html
@@ -1,20 +1,47 @@
 <html>
 <head>
-<title>BUFFR</title>
+  <title>BUFFR</title>
 
-<link rel="stylesheet" href="/stylesheets/style.css">
-<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/flat-ui/dist/css/flat-ui.min.css">
+  <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="/flat-ui/dist/css/flat-ui.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
 
-<script src="/angular/angular.min.js"></script>
+  <base href="/">
+
+  <script src="/angular/angular.js"></script>
+  <script src="/angular-ui-router/release/angular-ui-router.js"></script>
 </head>
-<body>
+<body ng-app="buffr">
+
+  <nav class="navbar navbar-fixed-top navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" ui-sref="landing">BUFFR</a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Buffers</a></li>
+          <li><a href="#">Users</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
   <div class="container">
-    <h1>BUFFR</h1>
-    <p>Welcome to BUFFR</p>
-    <p>This is an app designed to make and remember calculations of buffer solutions for biologists and biochemists.</p>
-    <a href="/users/add" class="btn btn-success">Click here to make an account.</a>
-    <a href="#" class="btn btn-warning">Click here to make a buffer without an account.</a>
+    <ui-view></ui-view>
   </div>
+
+  <script src="/jquery/dist/jquery.js"></script>
+  <script src="/flat-ui/dist/js/flat-ui.js"></script>
+  <script src="/js/main.js"></script>
+
 </body>
 </html>
