js-data giving a weird empty array

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <base href="/">
 
   <script src="/angular/angular.js"></script>
+  <script src="js-data/dist/js-data.js"></script>
+  <script src="js-data-angular/dist/js-data-angular.js"></script>
   <script src="/angular-ui-router/release/angular-ui-router.js"></script>
 </head>
 <body ng-app="buffr">
