--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Buffers</a></li>
-          <li><a href="#">Users</a></li>
+          <li><a ui-sref="buffers">Buffers</a></li>
+          <li><a ui-sref="users">Users</a></li>
         </ul>
       </div>
     </div>
